@@ -1,4 +1,0 @@
-/* KHTML fix stylesheet */
-/* work around the horizontal scrollbars */
-#column-content { margin-left: 0; }
-
